# spark-training

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: spark-with-kafka.Dockerfile
scripts/: base.py  streaming.py
