[tool.poetry]
name = "spark-training"
version = "0.1.0"
description = ""
authors = ["Pavlo Prokhorenko <paulprokhorenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
